--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,12 +30,11 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="300dp"
-            android:layout_height="155dp"
+            android:layout_height="200dp"
             android:background="@drawable/view_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/login_title"
@@ -55,19 +54,30 @@
                 android:hint="Email"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="2dp"
-                app:layout_constraintTop_toBottomOf="@+id/login_title"/>
+                app:layout_constraintTop_toBottomOf="@+id/login_title"
+                tools:layout_editor_absoluteY="2dp" />
+
             <EditText
                 android:id="@+id/login_password_bar"
                 android:layout_width="250dp"
                 android:layout_height="45dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:hint="Password"
                 android:inputType="textPassword"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/login_email_bar">
 
             </EditText>
+
+            <CheckBox
+                android:id="@+id/login_remember_me_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="Remember Me"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/login_password_bar" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -75,10 +85,12 @@
             android:layout_width="match_parent"
             android:layout_height="8dp">
         </Space>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:background="@drawable/view_background"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -90,6 +102,7 @@
                 android:background="#00000000"
                 android:text="Google Login"
                 android:textColor="@color/text_color"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"></Button>
 
