--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,6 @@
         android:layout_marginTop="42dp"
         android:background="@drawable/plus"
         android:rotation="45"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></ImageButton>
 
@@ -31,7 +30,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="300dp"
-            android:layout_height="200dp"
+            android:layout_height="180dp"
             android:background="@drawable/view_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_marginTop="8dp"
-                android:text="Login"
+                android:text="Create Account"
                 android:textColor="@color/text_color"
                 android:textSize="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -71,22 +70,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/register_email_bar">
 
             </EditText>
-
-            <CheckBox
-                android:id="@+id/login_remember_me_checkbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="Remember Me"
-                app:buttonTint="@color/text_color"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.502"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/register_password_bar"
-                android:layout_gravity="center_vertical"
-                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -119,25 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="8dp">
         </Space>
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:background="@drawable/view_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:elevation="12dp">
-            <Button
-                android:id="@+id/login_create_account_button"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/button_ripple"
-                android:text="Create Account"
-                android:textColor="@color/text_color"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"></Button>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
         <Space
             android:layout_width="match_parent"
             android:layout_height="8dp">
@@ -155,7 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/button_ripple"
-                android:text="Login"
+                android:text="Submit"
                 android:textColor="@color/text_color"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"></Button>
